# codex-harness-runner

./: .env.example  .gitignore  .mcp.json  Quick_Start.md  README.en.md  README.md  README.zh-CN.md  codex_team.py  main.py  multi_agent_workflow.py  pyproject.toml  requirements.txt  smoke_test.py  test-openai-agents.py  快速上手.md
.agents/plugins/: marketplace.json
.codex-plugin/: plugin.json
codex_harness/: __init__.py  agents.example.py  config.py  mcp.py  models.py  plugin_mcp.py  profiles.py  run_log.py  runner.py  schemas.py  team.py
docs/: Use-With-Agent-Tools.md  在-Codex-Claude-Code-等-Agent-工具中使用.md  快速上手.md
examples/: project_agent_extension.py
profiles/: brainstorm.toml  example.toml  my_first_podcast.toml  stok-mapping.toml  workspace.toml
skills/codex-harness-runner/: SKILL.md
