[project]
name = "codex-harness-runner"
version = "0.1.0"
description = "Harness engineering runner for project-scoped multi-agent workflows using Codex CLI as an MCP execution channel."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp==1.28.0",
    "openai-agents==0.17.6",
    "openai==2.43.0",
    "pydantic==2.13.4",
    "python-dotenv==1.2.2",
]

[project.scripts]
codex-harness-runner = "codex_harness.plugin_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["codex_harness"]
